@@ -4,10 +4,10 @@
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 03/19/2011
 .\"    Manual: \ \&
-.\"    Source: \ \& 0.10.3
+.\"    Source: \ \& 0.10.4-dev
 .\"  Language: English
 .\"
-.TH "MCABBER" "1" "03/19/2011" "\ \& 0\&.10\&.3\" "\ \&"
+.TH "MCABBER" "1" "03/19/2011" "\ \& 0\&.10\&.4\-dev\" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
