@@ -1,7 +1,7 @@
 MCABBER(1)
 ===========
 Mikael BERTHE <mcabber@lilotux.net>
-v0.10.3, May 2014
+v0.10.4-dev, May 2014
 
 NAME
 ----
